@@ -1,5 +1,5 @@
 ---
-title: 'Execution (manual)'
+title: 'For production'
 ---
 
 
@@ -14,7 +14,7 @@ For the application server to work, it must have access to the PostgreSQL databa
 
 ### Installing the application server as a service
 
--   Download the file `lsfusion-server-<version>.jar` of the required version (for example `lsfusion-server-4.1.jar`) from [the central server](https://download.lsfusion.org/java) to some folder (we will call this folder `$FUSION_DIR$`).
+-   Download the file `lsfusion-server-<version>.jar` of the required version (for example `lsfusion-server-6.0-beta0.jar`) from [the central server](https://download.lsfusion.org/java/) to some folder (we will call this folder `$FUSION_DIR$`).
 
 -   If the database server is located on another computer, and if authorization is enabled on the database server (for example, for Postgres, using the md5 method and if the password postgres is not empty), set the [parameters for connecting to the database server](Launch_parameters.md#connectdb) (e.g. by creating a startup [settings file](Launch_parameters.md#filesettings) in the `$FUSION_DIR$` folder)
 
@@ -25,48 +25,50 @@ For the application server to work, it must have access to the PostgreSQL databa
 -   Create a service in the operating system (for example, using [Apache Commons Daemon](http://commons.apache.org/daemon/)). In this case you must use the `$FUSION_DIR$` folder as the working directory and the following line as the start command: 
     - Linux
         ```shell script title="bash"   
-        java -cp ".:lsfusion-server-4.1.jar" lsfusion.server.logics.BusinessLogicsBootstrap
+        java -cp ".:lsfusion-server-6.0-beta0.jar" lsfusion.server.logics.BusinessLogicsBootstrap
         ```
-      <details><summary>Sample script to start a service on CentOS</summary>
-      <br/>
-      
-            [Unit]
-            Description=lsFusion
-            After=network.target
+      <details>
+      <summary>Sample script to start a service on CentOS</summary>
+
+        ```
+        [Unit]
+        Description=lsFusion
+        After=network.target
+        
+        [Service]
+        Type=forking
+        Environment="PID_FILE=/usr/lsfusion/jsvc-lsfusion.pid"
+        Environment="JAVA_HOME=/usr/java/latest"
+        Environment="LSFUSION_HOME=/usr/lsfusion"
+        Environment="LSFUSION_OPTS=-Xms1g -Xmx4g"
+        Environment="CLASSPATH=.:lsfusion-server-6.0-beta0.jar"
+        
+        ExecStart=/usr/bin/jsvc \
+                -home $JAVA_HOME \
+                -jvm server \
+                -cwd $LSFUSION_HOME \
+                -pidfile $PID_FILE \
+                -outfile ${LSFUSION_HOME}/logs/stdout.log \
+                -errfile ${LSFUSION_HOME}/logs/stderr.log \
+                -cp ${LSFUSION_HOME}/${CLASSPATH} \
+                $LSFUSION_OPTS \
+                lsfusion.server.logics.BusinessLogicsBootstrap
             
-            [Service]
-            Type=forking
-            Environment="PID_FILE=/usr/lsfusion/jsvc-lsfusion.pid"
-            Environment="JAVA_HOME=/usr/java/latest"
-            Environment="LSFUSION_HOME=/usr/lsfusion"
-            Environment="LSFUSION_OPTS=-Xms1g -Xmx4g"
-            Environment="CLASSPATH=.:lsfusion-server-4.1.jar"
+        ExecStop=/usr/bin/jsvc \
+                -home $JAVA_HOME \
+                -stop \
+                -pidfile $PID_FILE \
+                lsfusion.server.logics.BusinessLogicsBootstrap
             
-            ExecStart=/usr/bin/jsvc \
-                    -home $JAVA_HOME \
-                    -jvm server \
-                    -cwd $LSFUSION_HOME \
-                    -pidfile $PID_FILE \
-                    -outfile ${LSFUSION_HOME}/logs/stdout.log \
-                    -errfile ${LSFUSION_HOME}/logs/stderr.log \
-                    -cp ${LSFUSION_HOME}/${CLASSPATH} \
-                    $LSFUSION_OPTS \
-                    lsfusion.server.logics.BusinessLogicsBootstrap
-            
-            ExecStop=/usr/bin/jsvc \
-                    -home $JAVA_HOME \
-                    -stop \
-                    -pidfile $PID_FILE \
-                    lsfusion.server.logics.BusinessLogicsBootstrap
-            
-            [Install]
-            WantedBy=multi-user.target
+        [Install]
+        WantedBy=multi-user.target
+        ```
       
       </details>
 
     - Windows
         ```shell script title="cmd"
-        java -cp ".;lsfusion-server-4.1.jar" lsfusion.server.logics.BusinessLogicsBootstrap
+        java -cp ".;lsfusion-server-6.0-beta0.jar" lsfusion.server.logics.BusinessLogicsBootstrap
         ```
       
 ### Installing the web server (web and desktop client) as a service {#appservice}
@@ -76,19 +78,20 @@ For the application server to work, it must have access to the PostgreSQL databa
 To install the web server, Apache Tomcat version 8 or higher must be installed on the computer.
 :::
 
--   Download the file `lsfusion-client-<version>.war` of the required version from [the central server](https://download.lsfusion.org/java). For example, `lsfusion-client-4.1.war`. 
+-   Add `--add-opens=java.base/java.util=ALL-UNNAMED` to the Apache Tomcat startup parameters if Java version higher than 17 is used.    
+-   Download the file `lsfusion-client-<version>.war` of the required version from [the central server](https://download.lsfusion.org/java/). For example, `lsfusion-client-6.0-beta0.war`. 
 -   If the application server is located on another computer, as well as if [access parameters to the application server](Launch_parameters.md#accessapp) are different from the standard, set [connection parameters to the application server](Launch_parameters.md#connectapp) (for example by creating / editing the Tomcat [settings file](Launch_parameters.md#filewebsettings)) 
 -   Deploy the application on Tomcat. The easiest way is to copy Tomcat to the webapps folder. In this case, the file can be renamed first (for example, to `lsfusion.war`), since the file name will correspond to the context path where the application will be available. If Tomcat uses port `8080`, then the web client will be available at: `http://localhost:8080/<filename of the war file>`. For example, `http://localhost:8080/lsfusion`. An empty context name in Tomcat corresponds to the name `ROOT`, that is, if the file name is `ROOT.war`, the web client will be available at `http://localhost:8080/`. You can download the desktop client from the authorization page at `Run Desktop Client` (via Java Web Start).
 
 ### Installing only the desktop client (on the client's computer)
 
--   Download the file `lsfusion-client-<version>.jar` of the required version from [the central server](https://download.lsfusion.org/). For example, `lsfusion-client-4.1.jar`
+-   Download the file `lsfusion-client-<version>.jar` of the required version from [the central server](https://download.lsfusion.org/). For example, `lsfusion-client-6.0-beta0.jar`
 
 -   Create a shortcut on the desktop. In this case, you need to use as the working directory the directory which contains the downloaded client jar-file. Use the following line as the launch command:
 
     - bash
         ```shell script
-        java -jar lsfusion-client-4.1.jar
+        java -jar lsfusion-client-6.0-beta0.jar
         ```
 
 :::info
@@ -97,7 +100,27 @@ You can also use the method of installing the desktop client for development. To
 
 
 :::info
-The latest versions that are currently under development (snapshots) can be downloaded directly from the maven repository [https://repo.lsfusion.org](https://repo.lsfusion.org/). For example, for the server, the full path is as follows: <https://repo.lsfusion.org/nexus/service/rest/repository/browse/public/lsfusion/platform/server/> (for server and desktop client you need to download jar files with the `-assembly` postfix)
+The latest versions that are currently under development (snapshots) can be downloaded directly from the maven repository [https://repo.lsfusion.org](https://repo.lsfusion.org/). For example, for the server, the full path is as follows: https://repo.lsfusion.org/nexus/service/rest/repository/browse/public/lsfusion/platform/server/ (for server and desktop client you need to download jar files with the `-assembly` postfix)
 :::
+
+### Installing and running the application server and web client using Docker containers
+
+:::info
+To work with docker containers you need to have [Docker](https://docs.docker.com/get-docker/) and [Docker-compose](https://docs.docker.com/compose/) installed in your operating system.
+:::
+
+-   Download the file `docker-compose.yml` from [the central server](https://download.lsfusion.org/docker/) to a some folder (we will call this folder `$FUSION_DIR$`).
+    This file contains the settings for running the three containers:
+    - Postgres container
+    - Application server container
+    - Web client container
+-   If you need to make any changes to the startup process (e.g. postgres is already installed in the operating system, or if you need to use a different container version than the default one, or if you need to use some special environment variables), you should edit the docker-compose.yml file according to [Docker documentation](https://docs.docker.com/get-started/overview/).
+-   From within the `$FUSION_DIR$` folder, run the command `docker-compose up` from the console.
+-   When the download is complete and the containers are running, the web client will be accessible from the browser at `http://localhost:8080/`.
+-   After the first run, Docker will create subfolders in the `$FUSION_DIR$` folder:
+    - `docker-client-conf`
+    - `docker-db`
+    - `docker-server`
+-   In the `docker-server` folder, you need to place modules developed in lsFusion as files with the extension .lsf or folders containing such files. Other resource files (if any, e.g. report files, compiled Java files, images, .css, .js files, etc.) should also be placed there. Also in this folder there are server logs and `settings.properties` file.
 
   
